# neuralfishing

./: CMakeLists.txt  conanfile.py  main.cpp  run.sh
math/: util.cpp  util.hpp
neural/: fake_layer.hpp  images.hpp  layer.hpp  mnist_input_layer.cpp  mnist_input_layer.hpp  real_layer.cpp  real_layer.hpp
